--- a/rs-selectors/src/template.html
+++ b/rs-selectors/src/template.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RS Selectors</title>
-</head>
-<body>
-  <div id="root"></div>
-  <h1>Hello!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RS Selectors</title>
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:200,400,600,400italic,600italic" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" />
+  </head>
+  <body></body>
 </html>
