feat: create editor for game

--- a/rs-selectors/src/template.html
+++ b/rs-selectors/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RS Selectors</title>
+    <title>RS CSS Paws</title>
     <link href="https://fonts.googleapis.com/css?family=Exo+2:200,400,600,400italic,600italic" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" />
   </head>
